--- a/data_preproces.ipynb
+++ b/data_preproces.ipynb
@@ -27,7 +27,9 @@
     "data = pd.read_csv(\"FTSE100_raw.csv\")\n",
     "print(data.shape)\n",
     "data = pd.read_csv(\"DAX.csv\")\n",
-    "print(data.shape)\n"
+    "print(data.shape)\n",
+    "data = pd.read_csv(\"SP500_raw\")\n",
+    "print(data.shape)"
    ]
   },
   {
@@ -39,29 +41,43 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Index(['Date', 'Price', 'Open', 'High', 'Low', 'Vol.', 'Change %'], dtype='object')\n",
-      "            Date     Price      Open      High       Low     Vol. Change %\n",
-      "0     12/29/2023  7,733.24  7,722.74  7,746.91  7,719.02  225.64M    0.14%\n",
-      "1     12/28/2023  7,722.74  7,724.95  7,745.99  7,708.74  316.82M   -0.03%\n",
-      "2     12/27/2023  7,724.95  7,697.51  7,759.74  7,697.51  409.46M    0.36%\n",
-      "3     12/22/2023  7,697.51  7,694.73  7,715.21  7,676.43  320.56M    0.04%\n",
-      "4     12/21/2023  7,694.73  7,715.68  7,715.68  7,668.41  562.95M   -0.27%\n",
-      "...          ...       ...       ...       ...       ...      ...      ...\n",
-      "2267  01/08/2015  6,569.96  6,419.83  6,580.82  6,419.83  910.04M    2.34%\n",
-      "2268  01/07/2015  6,419.83  6,366.51  6,459.74  6,366.51  709.50M    0.84%\n",
-      "2269  01/06/2015  6,366.51  6,417.16  6,452.66  6,328.59  793.26M   -0.79%\n",
-      "2270  01/05/2015  6,417.16  6,547.80  6,576.74  6,404.49  750.52M   -2.00%\n",
-      "2271  01/02/2015  6,547.80  6,566.09  6,607.89  6,510.60  378.93M   -0.28%\n",
+      "Index(['Date', 'Target', 'Lag_1', 'Lag_2', 'Lag_3', 'Lag_4', 'Lag_5',\n",
+      "       'day_of_week', 'month', 'day_of_month'],\n",
+      "      dtype='object')\n",
+      "            Date    Target     Lag_1     Lag_2     Lag_3     Lag_4     Lag_5  \\\n",
+      "0     2015-01-12 -0.002819 -0.008439  0.017730  0.011563 -0.008933 -0.018447   \n",
+      "1     2015-01-13  0.004483 -0.008127 -0.008439  0.017730  0.011563 -0.008933   \n",
+      "2     2015-01-14  0.025468 -0.002582 -0.008127 -0.008439  0.017730  0.011563   \n",
+      "3     2015-01-15  0.029252 -0.005830 -0.002582 -0.008127 -0.008439  0.017730   \n",
+      "4     2015-01-16  0.018482 -0.009291 -0.005830 -0.002582 -0.008127 -0.008439   \n",
+      "...          ...       ...       ...       ...       ...       ...       ...   \n",
+      "2248  2023-12-15  0.007482  0.002644  0.013558  0.004589  0.003917  0.004087   \n",
+      "2249  2023-12-18  0.007186 -0.000076  0.002644  0.013558  0.004589  0.003917   \n",
+      "2250  2023-12-19  0.002767  0.004518 -0.000076  0.002644  0.013558  0.004589   \n",
+      "2251  2023-12-20  0.017930  0.005849  0.004518 -0.000076  0.002644  0.013558   \n",
+      "2252  2023-12-21  0.004851 -0.014793  0.005849  0.004518 -0.000076  0.002644   \n",
       "\n",
-      "[2272 rows x 7 columns]\n"
+      "      day_of_week  month  day_of_month  \n",
+      "0               0      1            12  \n",
+      "1               1      1            13  \n",
+      "2               2      1            14  \n",
+      "3               3      1            15  \n",
+      "4               4      1            16  \n",
+      "...           ...    ...           ...  \n",
+      "2248            4     12            15  \n",
+      "2249            0     12            18  \n",
+      "2250            1     12            19  \n",
+      "2251            2     12            20  \n",
+      "2252            3     12            21  \n",
+      "\n",
+      "[2253 rows x 10 columns]\n"
      ]
     }
    ],
    "source": [
     "#start_date = \"2015-01-01\"\n",
     "#end_date = \"2023-12-31\"\n",
-    "data_raw = pd.read_csv(\"FTSE100_raw.csv\")\n",
-    "\n",
+    "data_raw = pd.read_csv(\"sp500_full.csv\")\n",
     "print(data_raw.columns)\n",
     "print(data_raw)"
    ]
@@ -69,6 +85,59 @@
   {
    "cell_type": "code",
    "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "            Date  Target     Lag_1     Lag_2     Lag_3     Lag_4     Lag_5  \\\n",
+      "0     2015-01-12       0 -0.008439  0.017730  0.011563 -0.008933 -0.018447   \n",
+      "1     2015-01-13       1 -0.008127 -0.008439  0.017730  0.011563 -0.008933   \n",
+      "2     2015-01-14       1 -0.002582 -0.008127 -0.008439  0.017730  0.011563   \n",
+      "3     2015-01-15       1 -0.005830 -0.002582 -0.008127 -0.008439  0.017730   \n",
+      "4     2015-01-16       1 -0.009291 -0.005830 -0.002582 -0.008127 -0.008439   \n",
+      "...          ...     ...       ...       ...       ...       ...       ...   \n",
+      "2248  2023-12-15       1  0.002644  0.013558  0.004589  0.003917  0.004087   \n",
+      "2249  2023-12-18       1 -0.000076  0.002644  0.013558  0.004589  0.003917   \n",
+      "2250  2023-12-19       1  0.004518 -0.000076  0.002644  0.013558  0.004589   \n",
+      "2251  2023-12-20       1  0.005849  0.004518 -0.000076  0.002644  0.013558   \n",
+      "2252  2023-12-21       1 -0.014793  0.005849  0.004518 -0.000076  0.002644   \n",
+      "\n",
+      "      day_of_week  month  day_of_month  \n",
+      "0               0      1            12  \n",
+      "1               1      1            13  \n",
+      "2               2      1            14  \n",
+      "3               3      1            15  \n",
+      "4               4      1            16  \n",
+      "...           ...    ...           ...  \n",
+      "2248            4     12            15  \n",
+      "2249            0     12            18  \n",
+      "2250            1     12            19  \n",
+      "2251            2     12            20  \n",
+      "2252            3     12            21  \n",
+      "\n",
+      "[2253 rows x 10 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "data_raw[\"Target\"] = (data_raw[\"Target\"] > 0).astype(int)\n",
+    "print(data_raw)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_raw.to_csv(\"SP500_classification.csv\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,21 +157,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Index(['LogReturn', 'Target'], dtype='object')\n"
+      "            Date  LogReturn  Target\n",
+      "0     12/29/2023        NaN       0\n",
+      "1     12/28/2023  -0.002995       1\n",
+      "2     12/27/2023   0.002423       0\n",
+      "3     12/22/2023  -0.002146       1\n",
+      "4     12/21/2023  -0.001124       1\n",
+      "...          ...        ...     ...\n",
+      "2279  01/08/2015   0.019410       0\n",
+      "2280  01/07/2015  -0.033009       0\n",
+      "2281  01/06/2015  -0.005111       0\n",
+      "2282  01/05/2015   0.000370       0\n",
+      "2283  01/02/2015   0.030314       0\n",
+      "\n",
+      "[2284 rows x 3 columns]\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/4c/gx6ft8qx2c90jb6mwvlx3gcw0000gn/T/ipykernel_81881/1590925309.py:15: SettingWithCopyWarning: \n",
+      "/var/folders/4c/gx6ft8qx2c90jb6mwvlx3gcw0000gn/T/ipykernel_6329/2792111517.py:18: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
@@ -119,10 +201,13 @@
     "\n",
     "# Define the prediction target: \"HORIZON\"-day forward cumulative return\n",
     "HORIZON = 5 # cumulative return of 5 days \n",
-    "data_raw[\"Target\"] = data_raw[\"LogReturn\"].rolling(window=HORIZON).sum().shift(-HORIZON)\n",
+    "cum_return = data_raw[\"LogReturn\"].rolling(window=HORIZON).sum().shift(-HORIZON)\n",
+    "# Print more values: show the first 20 and last 20 values, plus summary stats\n",
+    "data_raw[\"Target\"] = (cum_return > 0).astype(int)\n",
+    "\n",
     "# Keep only date, log return and target\n",
-    "data = data_raw[[\"LogReturn\", \"Target\"]]\n",
-    "print(data.columns)\n",
+    "data = data_raw[[\"Date\",\"LogReturn\", \"Target\"]]\n",
+    "print(data)\n",
     "\n",
     "# Drop the first row with NaN return (from shift operation)\n",
     "data.dropna(inplace=True)"
@@ -130,49 +215,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/4c/gx6ft8qx2c90jb6mwvlx3gcw0000gn/T/ipykernel_81881/2155772352.py:6: SettingWithCopyWarning: \n",
+      "/var/folders/4c/gx6ft8qx2c90jb6mwvlx3gcw0000gn/T/ipykernel_6329/2107050231.py:6: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  data[f\"Lag_{lag}\"] = data[\"LogReturn\"].shift(lag)\n",
-      "/var/folders/4c/gx6ft8qx2c90jb6mwvlx3gcw0000gn/T/ipykernel_81881/2155772352.py:6: SettingWithCopyWarning: \n",
+      "/var/folders/4c/gx6ft8qx2c90jb6mwvlx3gcw0000gn/T/ipykernel_6329/2107050231.py:6: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  data[f\"Lag_{lag}\"] = data[\"LogReturn\"].shift(lag)\n",
-      "/var/folders/4c/gx6ft8qx2c90jb6mwvlx3gcw0000gn/T/ipykernel_81881/2155772352.py:6: SettingWithCopyWarning: \n",
+      "/var/folders/4c/gx6ft8qx2c90jb6mwvlx3gcw0000gn/T/ipykernel_6329/2107050231.py:6: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  data[f\"Lag_{lag}\"] = data[\"LogReturn\"].shift(lag)\n",
-      "/var/folders/4c/gx6ft8qx2c90jb6mwvlx3gcw0000gn/T/ipykernel_81881/2155772352.py:6: SettingWithCopyWarning: \n",
+      "/var/folders/4c/gx6ft8qx2c90jb6mwvlx3gcw0000gn/T/ipykernel_6329/2107050231.py:6: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  data[f\"Lag_{lag}\"] = data[\"LogReturn\"].shift(lag)\n",
-      "/var/folders/4c/gx6ft8qx2c90jb6mwvlx3gcw0000gn/T/ipykernel_81881/2155772352.py:6: SettingWithCopyWarning: \n",
+      "/var/folders/4c/gx6ft8qx2c90jb6mwvlx3gcw0000gn/T/ipykernel_6329/2107050231.py:6: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  data[f\"Lag_{lag}\"] = data[\"LogReturn\"].shift(lag)\n",
-      "/var/folders/4c/gx6ft8qx2c90jb6mwvlx3gcw0000gn/T/ipykernel_81881/2155772352.py:8: SettingWithCopyWarning: \n",
+      "/var/folders/4c/gx6ft8qx2c90jb6mwvlx3gcw0000gn/T/ipykernel_6329/2107050231.py:8: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  data.dropna(inplace=True)  # drop rows with NaNs introduced by lagging\n",
-      "/var/folders/4c/gx6ft8qx2c90jb6mwvlx3gcw0000gn/T/ipykernel_81881/2155772352.py:10: SettingWithCopyWarning: \n",
+      "/var/folders/4c/gx6ft8qx2c90jb6mwvlx3gcw0000gn/T/ipykernel_6329/2107050231.py:10: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
@@ -186,7 +271,7 @@
     "# -----------------------------------\n",
     "N_LAGS = 5\n",
     "for lag in range(1, N_LAGS + 1):\n",
-    "    data[f\"Lag_{lag}\"] = data[\"LogReturn\"].shift(lag)\n",
+    "    data[f\"Lag_{lag}\"] = data[\"LogReturn\"].shift(lag) \n",
     "\n",
     "data.dropna(inplace=True)  # drop rows with NaNs introduced by lagging\n",
     "\n",
@@ -195,25 +280,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "           Date    Target     Lag_1     Lag_2     Lag_3     Lag_4     Lag_5  \\\n",
-      "6    2023-12-19 -0.012550  0.002719 -0.000361 -0.003558  0.000286 -0.001359   \n",
-      "7    2023-12-18 -0.009181 -0.010115  0.002719 -0.000361 -0.003558  0.000286   \n",
-      "8    2023-12-15 -0.002893 -0.003088 -0.010115  0.002719 -0.000361 -0.003558   \n",
-      "9    2023-12-14 -0.017842 -0.005019 -0.003088 -0.010115  0.002719 -0.000361   \n",
-      "10   2023-12-13 -0.004389  0.009539 -0.005019 -0.003088 -0.010115  0.002719   \n",
-      "...         ...       ...       ...       ...       ...       ...       ...   \n",
-      "2262 2015-01-15  0.010893 -0.005369 -0.005236 -0.016173 -0.010143 -0.005312   \n",
-      "2263 2015-01-14  0.004898 -0.007892 -0.005369 -0.005236 -0.016173 -0.010143   \n",
-      "2264 2015-01-13 -0.027222 -0.017121 -0.007892 -0.005369 -0.005236 -0.016173   \n",
-      "2265 2015-01-12 -0.013045  0.023780 -0.017121 -0.007892 -0.005369 -0.005236   \n",
-      "2266 2015-01-09  0.007152 -0.006253  0.023780 -0.017121 -0.007892 -0.005369   \n",
+      "           Date  Target     Lag_1     Lag_2     Lag_3     Lag_4     Lag_5  \\\n",
+      "6    2023-12-19       1  0.002731 -0.001124 -0.002146  0.002423 -0.002995   \n",
+      "7    2023-12-18       1  0.000679  0.002731 -0.001124 -0.002146  0.002423   \n",
+      "8    2023-12-15       1 -0.005621  0.000679  0.002731 -0.001124 -0.002146   \n",
+      "9    2023-12-14       0  0.006041 -0.005621  0.000679  0.002731 -0.001124   \n",
+      "10   2023-12-13       0  0.000047  0.006041 -0.005621  0.000679  0.002731   \n",
+      "...         ...     ...       ...       ...       ...       ...       ...   \n",
+      "2279 2015-01-08       0 -0.013731 -0.016134  0.012544 -0.021717 -0.013382   \n",
+      "2280 2015-01-07       0  0.019410 -0.013731 -0.016134  0.012544 -0.021717   \n",
+      "2281 2015-01-06       0 -0.033009  0.019410 -0.013731 -0.016134  0.012544   \n",
+      "2282 2015-01-05       0 -0.005111 -0.033009  0.019410 -0.013731 -0.016134   \n",
+      "2283 2015-01-02       0  0.000370 -0.005111 -0.033009  0.019410 -0.013731   \n",
       "\n",
       "      day_of_week  month  day_of_month  \n",
       "6               1     12            19  \n",
@@ -222,32 +307,38 @@
       "9               3     12            14  \n",
       "10              2     12            13  \n",
       "...           ...    ...           ...  \n",
-      "2262            3      1            15  \n",
-      "2263            2      1            14  \n",
-      "2264            1      1            13  \n",
-      "2265            0      1            12  \n",
-      "2266            4      1             9  \n",
+      "2279            3      1             8  \n",
+      "2280            2      1             7  \n",
+      "2281            1      1             6  \n",
+      "2282            0      1             5  \n",
+      "2283            4      1             2  \n",
       "\n",
-      "[2261 rows x 10 columns]\n"
+      "[2278 rows x 10 columns]\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/4c/gx6ft8qx2c90jb6mwvlx3gcw0000gn/T/ipykernel_81881/1496232773.py:5: SettingWithCopyWarning: \n",
+      "/var/folders/4c/gx6ft8qx2c90jb6mwvlx3gcw0000gn/T/ipykernel_6329/2948465921.py:4: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  data[\"Date\"] = pd.to_datetime(data[\"Date\"], format=\"%m/%d/%Y\")\n",
+      "/var/folders/4c/gx6ft8qx2c90jb6mwvlx3gcw0000gn/T/ipykernel_6329/2948465921.py:5: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  data[\"day_of_week\"] = data[\"Date\"].dt.dayofweek   # Monday = 0, Sunday = 6\n",
-      "/var/folders/4c/gx6ft8qx2c90jb6mwvlx3gcw0000gn/T/ipykernel_81881/1496232773.py:6: SettingWithCopyWarning: \n",
+      "/var/folders/4c/gx6ft8qx2c90jb6mwvlx3gcw0000gn/T/ipykernel_6329/2948465921.py:6: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  data[\"month\"] = data[\"Date\"].dt.month             # 1 to 12\n",
-      "/var/folders/4c/gx6ft8qx2c90jb6mwvlx3gcw0000gn/T/ipykernel_81881/1496232773.py:7: SettingWithCopyWarning: \n",
+      "/var/folders/4c/gx6ft8qx2c90jb6mwvlx3gcw0000gn/T/ipykernel_6329/2948465921.py:7: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -260,7 +351,7 @@
     "# -----------------------------------\n",
     "# STEP 4: Add temporal features\n",
     "# -----------------------------------\n",
-    "data.insert(0, \"Date\", pd.to_datetime(data_raw[\"Date\"], format=\"%m/%d/%Y\"))\n",
+    "data[\"Date\"] = pd.to_datetime(data[\"Date\"], format=\"%m/%d/%Y\")\n",
     "data[\"day_of_week\"] = data[\"Date\"].dt.dayofweek   # Monday = 0, Sunday = 6\n",
     "data[\"month\"] = data[\"Date\"].dt.month             # 1 to 12\n",
     "data[\"day_of_month\"] = data[\"Date\"].dt.day        # 1 to 31\n",
@@ -269,11 +360,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data.to_csv(\"FTSE100_processed.csv\", index=False)\n"
+    "data.to_csv(\"DAX_classification.csv\", index=False)\n"
    ]
   },
   {
