--- a/results.ipynb
+++ b/results.ipynb
@@ -57,6 +57,32 @@
   },
   {
    "cell_type": "markdown",
+   "id": "4887cc9e",
+   "metadata": {},
+   "source": [
+    "\n",
+    "\n",
+    "Aggregate Local (robust) • Epoch 71  Worst-case BCE=0.631770  (range 0.620428–0.631770)\n",
+    "Aggregate Accuracy        • Epoch 71  Worst-case ACC=0.689579  (range 0.689579–0.727273, avg=0.710273)\n",
+    "Aggregate Local (robust) • Epoch 37  Worst-case Acc=0.702882  (range 0.702882–0.707317)\n",
+    "\n",
+    "=== FINAL TEST ERRORS (round 100) ===\n",
+    "Centralised      •  BCE=0.607162  Accuracy=0.727273\n",
+    "Local client 0 •  BCE=0.636516  Accuracy=0.700665\n",
+    "Local client 1 •  BCE=0.616529  Accuracy=0.711752\n",
+    "Local client 2 •  BCE=0.623078  Accuracy=0.718404\n",
+    "FedAvg           •  BCE=0.620237  Accuracy=0.718404\n",
+    "\n",
+    "=== BEST-EPOCH ERRORS (lowest loss anywhere in 100 rounds) ===\n",
+    "Centralised      •  Epoch 70  BCE=0.605196  Accuracy=0.729490\n",
+    "Local client 0 •  Epoch 71BCE=0.631770Accuracy=0.689579\n",
+    "Local client 1 •  Epoch 89BCE=0.612936Accuracy=0.716186\n",
+    "Local client 2 •  Epoch 68BCE=0.618509Accuracy=0.725055\n",
+    "FedAvg           •  Round 83BCE=0.619778Accuracy=0.716186"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "73dbee22",
    "metadata": {},
    "source": [
@@ -101,6 +127,32 @@
     ")\n",
     "\n",
     "print(df_quarters)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b31435d6",
+   "metadata": {},
+   "source": [
+    "Aggregate Local (robust) • Epoch 01  Worst-case BCE=0.738776  (range 0.670561–0.738776)\n",
+    "Aggregate Accuracy        • Epoch 01  Worst-case ACC=0.470067  (range 0.470067–0.603104, avg=0.536585)\n",
+    "Aggregate Local (robust) • Epoch 101  Worst-case Acc=0.558758  (range 0.558758–0.700665)\n",
+    "\n",
+    "=== FINAL TEST ERRORS (round 100) ===\n",
+    "Centralised      •  BCE=0.608560  Accuracy=0.727273\n",
+    "Local client 0 •  BCE=0.624115  Accuracy=0.669623\n",
+    "Local client 1 •  BCE=0.627470  Accuracy=0.700665\n",
+    "Local client 2 •  BCE=0.855297  Accuracy=0.558758\n",
+    "Local client 3 •  BCE=0.695049  Accuracy=0.636364\n",
+    "FedAvg           •  BCE=0.619352  Accuracy=0.720621\n",
+    "\n",
+    "=== BEST-EPOCH ERRORS (lowest loss anywhere in 100 rounds) ===\n",
+    "Centralised      •  Epoch 50  BCE=0.604646  Accuracy=0.731707\n",
+    "Local client 0 •  Epoch 65BCE=0.622673Accuracy=0.669623\n",
+    "Local client 1 •  Epoch 100BCE=0.627275Accuracy=0.702882\n",
+    "Local client 2 •  Epoch 01BCE=0.738776Accuracy=0.470067\n",
+    "Local client 3 •  Epoch 13BCE=0.662466Accuracy=0.580931\n",
+    "FedAvg           •  Round 101BCE=0.619352Accuracy=0.720621"
    ]
   },
   {
@@ -153,6 +205,32 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c0cd76ed",
+   "metadata": {},
+   "source": [
+    "Aggregate Local (robust) • Epoch 44  Worst-case BCE=0.720284  (range 0.653768–0.720284)\n",
+    "Aggregate Accuracy        • Epoch 44  Worst-case ACC=0.443459  (range 0.443459–0.662971, avg=0.588137)\n",
+    "Aggregate Local (robust) • Epoch 05  Worst-case Acc=0.481153  (range 0.481153–0.580931)\n",
+    "\n",
+    "=== FINAL TEST ERRORS (round 100) ===\n",
+    "Centralised      •  BCE=0.608560  Accuracy=0.727273\n",
+    "Local client 0 •  BCE=0.668894  Accuracy=0.678492\n",
+    "Local client 1 •  BCE=0.645312  Accuracy=0.685144\n",
+    "Local client 2 •  BCE=0.720597  Accuracy=0.443459\n",
+    "Local client 3 •  BCE=0.643210  Accuracy=0.649667\n",
+    "FedAvg           •  BCE=0.641276  Accuracy=0.700665\n",
+    "\n",
+    "=== BEST-EPOCH ERRORS (lowest loss anywhere in 100 rounds) ===\n",
+    "Centralised      •  Epoch 50  BCE=0.604646  Accuracy=0.731707\n",
+    "Local client 0 •  Epoch 49BCE=0.652733Accuracy=0.665188\n",
+    "Local client 1 •  Epoch 70BCE=0.639273Accuracy=0.687361\n",
+    "Local client 2 •  Epoch 44BCE=0.720284Accuracy=0.443459\n",
+    "Local client 3 •  Epoch 98BCE=0.643210Accuracy=0.649667\n",
+    "FedAvg           •  Round 100BCE=0.640412Accuracy=0.698448"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "4dc396c0",
    "metadata": {},
    "source": [
@@ -200,6 +278,31 @@
   },
   {
    "cell_type": "markdown",
+   "id": "3a81753b",
+   "metadata": {},
+   "source": [
+    "Aggregate Local (robust) • Epoch 89  Worst-case BCE=0.621746  (range 0.616991–0.621746)\n",
+    "Aggregate Accuracy        • Epoch 89  Worst-case ACC=0.707506  (range 0.707506–0.711921, avg=0.709713)\n",
+    "Aggregate Local (robust) • Epoch 49  Worst-case Acc=0.707506  (range 0.707506–0.707506)\n",
+    "=== FINAL TEST ERRORS (round 100) ===\n",
+    "Centralised      •  BCE=0.617396  Accuracy=0.716336\n",
+    "Local client 0 •  BCE=0.623981  Accuracy=0.705298\n",
+    "Local client 1 •  BCE=0.617984  Accuracy=0.710817\n",
+    "FedAvg           •  BCE=0.618329  Accuracy=0.711921\n",
+    "FedAvg retrain last-layer •  BCE=0.618983  Accuracy=0.704194\n",
+    "FedAvg retrain from scratch •  BCE=0.680061  Accuracy=0.582781\n",
+    "\n",
+    "=== BEST-EPOCH ERRORS (lowest loss anywhere in 100 rounds) ===\n",
+    "Centralised      •  Epoch 51  BCE=0.613862  Accuracy=0.714128\n",
+    "Local client 0 •  Epoch 89BCE=0.621746Accuracy=0.707506\n",
+    "Local client 1 •  Epoch 90BCE=0.616266Accuracy=0.711921\n",
+    "FedAvg           •  Round 89BCE=0.616756Accuracy=0.714128\n",
+    "FedAvg retrain last-layer •  Epoch 01  BCE=0.606860  Accuracy=0.708609\n",
+    "FedAvg retrain from scratch •  Epoch 101  BCE=0.680061  Accuracy=0.582781\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "360ab562",
    "metadata": {},
    "source": [
@@ -243,6 +346,30 @@
     ")\n",
     "\n",
     "print(df_dp)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "76087cc3",
+   "metadata": {},
+   "source": [
+    "Aggregate Local (robust) • Epoch 71  Worst-case BCE=0.631770  (range 0.620428–0.631770)\n",
+    "Aggregate Accuracy        • Epoch 71  Worst-case ACC=0.689579  (range 0.689579–0.727273, avg=0.710273)\n",
+    "Aggregate Local (robust) • Epoch 37  Worst-case Acc=0.702882  (range 0.702882–0.707317)\n",
+    "\n",
+    "=== FINAL TEST ERRORS (round 100) ===\n",
+    "Centralised      •  BCE=0.607162  Accuracy=0.727273\n",
+    "Local client 0 •  BCE=0.636516  Accuracy=0.700665\n",
+    "Local client 1 •  BCE=0.616529  Accuracy=0.711752\n",
+    "Local client 2 •  BCE=0.623078  Accuracy=0.718404\n",
+    "FedAvg           •  BCE=0.692949  Accuracy=0.456763\n",
+    "\n",
+    "=== BEST-EPOCH ERRORS (lowest loss anywhere in 100 rounds) ===\n",
+    "Centralised      •  Epoch 70  BCE=0.605196  Accuracy=0.729490\n",
+    "Local client 0 •  Epoch 71BCE=0.631770Accuracy=0.689579\n",
+    "Local client 1 •  Epoch 89BCE=0.612936Accuracy=0.716186\n",
+    "Local client 2 •  Epoch 68BCE=0.618509Accuracy=0.725055\n",
+    "FedAvg           •  Round 01BCE=0.677141Accuracy=0.580931\n"
    ]
   },
   {
